# llm-ui

./: .gitignore  .vimspector.json  Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
static/: app.js  index.html
