[package]
name = "llm_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm = { git = "https://github.com/rustformers/llm.git" }
#llm = "0.1.1"
rand = "0.8.5"
actix-files = "0.6.2"
actix-web = "4"
actix-rt = "2.8.0"
async-stream = "0.3.3"
once_cell = "1.17.1"
tokio = { version = "1.20.0", features = ["full"] }
bytes = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.71"
clap = { version = "4.1.8", features = ["derive"] }

